test/input/negative/person_schema.ls
type Person = {
    name: string,
    age: int,
    active: bool
}
